maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:52: error: ';' expected but '=' found.
  (min, neighborToGo) = processNeighborForExit(x, y, BOTTOM, min);
                      ^ShortestPathMaze:53: error: ';' expected but '=' found.
  (min, neighborToGo) = processNeighborForExit(x, y, LEFT, min);
                      ^ShortestPathMaze:54: error: ';' expected but '=' found.
  (min, neighborToGo) = processNeighborForExit(x, y, RIGHT, min);
                      ^